added new page for HW practice

--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tara B's Home Page</title>
+    <title>Tara New Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
 </head>
+
 <body>
- <h1>Hello World! Tara's first site</h1>
- </h1>   
+    <article class="upcoming events">
+    <h1>events this week</h1>
+    <h2>music festival downtown</h2>
+    ,<img src="https://files.slack.com/files-pri/T8V6TSF28-FGGJ7G6KW/awesomeinc.jpg
+    " alt="">
+    ,<table style="width:100%">
+    ,<tr>
+    ,<th>firstname</th>
+    ,<th>lastname</th>
+    ,<th>age</th>
+    ,<tr>
+    ,<td>Tara</td>
+    ,<td>Bissell</td>
+    ,<td>42</td>
+    ,</tr>
+    ,<a href="http://tarabissellacupuncture.com">Tara's work site</a>
+    </article>
+    <footer>
+        <p>copyright 2019 Tara Bissell</p>
+    </footer>
 </body>
+
 </html>
